test/error/UnreachableWhile.ci
public static class Test
{
	public static bool Run()
	{
		while (true) {
		}
		while (false) { //ERROR: Unreachable statement
		}
	}
}
